Fixes build configuration and updates to more current dependencies