@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eclipse.viatra.examples.cps</groupId>
 	<artifactId>org.eclipse.viatra.examples.cps.parent</artifactId>
-	<version>2.4.0-SNAPSHOT</version>
+	<version>2.6.0-SNAPSHOT</version>
 	<name>CPS Demonstrator</name>
 	<url></url>
 	<packaging>pom</packaging>
@@ -77,10 +77,10 @@
 		</profile>
 	</profiles>
 	<properties>
-		<tycho.version>1.6.0</tycho.version>
-		<xtend.compiler.version>2.16.0</xtend.compiler.version>
-		<viatra.repository.url>http://download.eclipse.org/viatra/updates/integration</viatra.repository.url>
-		<viatra.compiler.version>2.4.0-SNAPSHOT</viatra.compiler.version>
+		<tycho.version>1.7.0</tycho.version>
+		<xtend.compiler.version>2.22.0</xtend.compiler.version>
+		<viatra.repository.url>http://download.eclipse.org/viatra/updates/integration/latest</viatra.repository.url>
+		<viatra.compiler.version>2.6.0-SNAPSHOT</viatra.compiler.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
@@ -142,7 +142,6 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<!-- <argLine>-Xmx2048m -XX:MaxPermSize=256m ${tycho.testArgLine} ${cps.test.vmargs}</argLine> -->
 					<excludes>
 		            	<exclude>**/IntegrationTest*.java</exclude>
 						<exclude>**/integration/*.java</exclude>
@@ -151,23 +150,6 @@
 		            </excludes>
 		            <failIfNoTests>false</failIfNoTests>
 				</configuration>
-				<!-- <executions>
-		         <execution>
-		            <id>unit-test</id>
-		            <goals>
-		              <goal>test</goal>
-		            </goals>
-		            <phase>test</phase>
-		            <configuration>
-		            	<excludes>
-		            		<exclude>**/IntegrationTest*.java</exclude>
-		            	</excludes>
-		            	<includes>
-		            		<include>**/*Test.java</include>
-		            	</includes>
-		            </configuration>
-		          </execution>
-		        </executions> -->
 			</plugin>
 		</plugins>
 		<pluginManagement>
